// ===========================================================================
// CODITY - Production Distributed Job Scheduler Schema
// ===========================================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ---------------------------------------------------------------------------
// AUTH & ORGANIZATIONS
// ---------------------------------------------------------------------------

enum GlobalRole {
  USER
  ADMIN
}

enum OrgRole {
  OWNER
  ADMIN
  MEMBER
  VIEWER
}

model User {
  id        String     @id @default(uuid())
  email     String     @unique
  password  String
  name      String
  role      GlobalRole @default(USER)
  avatarUrl String?    @map("avatar_url")
  createdAt DateTime   @default(now()) @map("created_at")
  updatedAt DateTime   @updatedAt @map("updated_at")

  memberships   OrganizationMember[]
  auditLogs     AuditLog[]
  notifications Notification[]

  @@map("users")
}

model Organization {
  id        String   @id @default(uuid())
  name      String
  slug      String   @unique
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  members  OrganizationMember[]
  projects Project[]

  @@map("organizations")
}

model OrganizationMember {
  id             String   @id @default(uuid())
  organizationId String   @map("organization_id")
  userId         String   @map("user_id")
  role           OrgRole  @default(MEMBER)
  joinedAt       DateTime @default(now()) @map("joined_at")

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([organizationId, userId])
  @@index([userId])
  @@map("organization_members")
}

// ---------------------------------------------------------------------------
// PROJECTS
// ---------------------------------------------------------------------------

model Project {
  id             String   @id @default(uuid())
  name           String
  description    String?
  organizationId String   @map("organization_id")
  createdAt      DateTime @default(now()) @map("created_at")
  updatedAt      DateTime @updatedAt @map("updated_at")

  organization  Organization   @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  queues        Queue[]
  workers       Worker[]
  scheduledJobs ScheduledJob[]

  @@index([organizationId])
  @@map("projects")
}

// ---------------------------------------------------------------------------
// RETRY POLICIES
// ---------------------------------------------------------------------------

enum RetryStrategy {
  FIXED
  LINEAR
  EXPONENTIAL
}

model RetryPolicy {
  id         String        @id @default(uuid())
  name       String
  strategy   RetryStrategy @default(EXPONENTIAL)
  maxRetries Int           @default(3) @map("max_retries")
  baseDelay  Int           @default(1000) @map("base_delay")
  maxDelay   Int           @default(300000) @map("max_delay")
  createdAt  DateTime      @default(now()) @map("created_at")

  queues Queue[]

  @@map("retry_policies")
}

// ---------------------------------------------------------------------------
// QUEUES
// ---------------------------------------------------------------------------

enum QueueStatus {
  ACTIVE
  PAUSED
  DRAINING
}

model Queue {
  id            String      @id @default(uuid())
  name          String
  projectId     String      @map("project_id")
  retryPolicyId String?     @map("retry_policy_id")
  priority      Int         @default(0)
  concurrency   Int         @default(5)
  status        QueueStatus @default(ACTIVE)
  description   String?
  createdAt     DateTime    @default(now()) @map("created_at")
  updatedAt     DateTime    @updatedAt @map("updated_at")

  project       Project       @relation(fields: [projectId], references: [id], onDelete: Cascade)
  retryPolicy   RetryPolicy?  @relation(fields: [retryPolicyId], references: [id], onDelete: SetNull)
  jobs          Job[]
  scheduledJobs ScheduledJob[]

  @@unique([projectId, name])
  @@index([projectId, status])
  @@index([priority])
  @@map("queues")
}

// ---------------------------------------------------------------------------
// SCHEDULED JOBS (Cron definitions)
// ---------------------------------------------------------------------------

enum ScheduledJobStatus {
  ACTIVE
  PAUSED
  DISABLED
}

model ScheduledJob {
  id             String             @id @default(uuid())
  projectId      String             @map("project_id")
  queueId        String             @map("queue_id")
  name           String
  cronExpression String             @map("cron_expression")
  payload        Json               @default("{}")
  timezone       String             @default("UTC")
  status         ScheduledJobStatus @default(ACTIVE)
  lastRunAt      DateTime?          @map("last_run_at")
  nextRunAt      DateTime?          @map("next_run_at")
  runCount       Int                @default(0) @map("run_count")
  createdAt      DateTime           @default(now()) @map("created_at")
  updatedAt      DateTime           @updatedAt @map("updated_at")

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  queue   Queue   @relation(fields: [queueId], references: [id], onDelete: Cascade)

  @@index([projectId, status])
  @@index([nextRunAt, status])
  @@map("scheduled_jobs")
}

// ---------------------------------------------------------------------------
// JOBS
// ---------------------------------------------------------------------------

enum JobStatus {
  QUEUED
  SCHEDULED
  CLAIMED
  RUNNING
  COMPLETED
  FAILED
  RETRYING
  DEAD
}

enum JobType {
  IMMEDIATE
  DELAYED
  SCHEDULED
  RECURRING
  BATCH
}

model Job {
  id              String    @id @default(uuid())
  queueId         String    @map("queue_id")
  name            String
  type            JobType   @default(IMMEDIATE)
  payload         Json      @default("{}")
  status          JobStatus @default(QUEUED)
  priority        Int       @default(0)
  attempts        Int       @default(0)
  maxAttempts     Int       @default(3) @map("max_attempts")
  scheduledFor    DateTime? @map("scheduled_for")
  cronExpression  String?   @map("cron_expression")
  batchId         String?   @map("batch_id")
  idempotencyKey  String?   @unique @map("idempotency_key")
  claimedBy       String?   @map("claimed_by")
  lockedUntil     DateTime? @map("locked_until")
  startedAt       DateTime? @map("started_at")
  completedAt     DateTime? @map("completed_at")
  failedAt        DateTime? @map("failed_at")
  durationMs      Int?      @map("duration_ms")
  result          Json?
  error           String?
  createdAt       DateTime  @default(now()) @map("created_at")
  updatedAt       DateTime  @updatedAt @map("updated_at")

  queue      Queue             @relation(fields: [queueId], references: [id], onDelete: Cascade)
  executions JobExecution[]
  logs       JobLog[]
  dlqEntry   DeadLetterQueue?

  @@index([queueId, status, priority, scheduledFor])
  @@index([status, createdAt])
  @@index([batchId])
  @@index([claimedBy])
  @@index([scheduledFor])
  @@index([type, status])
  @@index([completedAt])
  @@map("jobs")
}

// ---------------------------------------------------------------------------
// JOB EXECUTIONS & LOGS
// ---------------------------------------------------------------------------

enum ExecutionStatus {
  STARTED
  COMPLETED
  FAILED
  TIMEOUT
}

model JobExecution {
  id          String          @id @default(uuid())
  jobId       String          @map("job_id")
  workerId    String          @map("worker_id")
  attempt     Int
  status      ExecutionStatus @default(STARTED)
  startedAt   DateTime        @default(now()) @map("started_at")
  completedAt DateTime?       @map("completed_at")
  duration    Int?
  error       String?
  result      Json?

  job Job @relation(fields: [jobId], references: [id], onDelete: Cascade)

  @@index([jobId, attempt])
  @@index([workerId])
  @@index([startedAt])
  @@index([status, startedAt])
  @@map("job_executions")
}

enum LogLevel {
  DEBUG
  INFO
  WARN
  ERROR
}

model JobLog {
  id        String   @id @default(uuid())
  jobId     String   @map("job_id")
  level     LogLevel @default(INFO)
  message   String
  metadata  Json?
  timestamp DateTime @default(now())

  job Job @relation(fields: [jobId], references: [id], onDelete: Cascade)

  @@index([jobId, timestamp])
  @@index([level])
  @@map("job_logs")
}

// ---------------------------------------------------------------------------
// WORKERS
// ---------------------------------------------------------------------------

enum WorkerStatus {
  ONLINE
  BUSY
  IDLE
  STALE
  OFFLINE
}

model Worker {
  id             String       @id @default(uuid())
  projectId      String       @map("project_id")
  name           String
  status         WorkerStatus @default(ONLINE)
  hostname       String?
  pid            Int?
  concurrency    Int          @default(5)
  currentLoad    Int          @default(0) @map("current_load")
  totalProcessed Int          @default(0) @map("total_processed")
  totalFailed    Int          @default(0) @map("total_failed")
  lastHeartbeat  DateTime?    @map("last_heartbeat")
  startedAt      DateTime     @default(now()) @map("started_at")
  stoppedAt      DateTime?    @map("stopped_at")

  project    Project           @relation(fields: [projectId], references: [id], onDelete: Cascade)
  heartbeats WorkerHeartbeat[]

  @@index([projectId, status])
  @@index([lastHeartbeat])
  @@map("workers")
}

model WorkerHeartbeat {
  id        String   @id @default(uuid())
  workerId  String   @map("worker_id")
  timestamp DateTime @default(now())
  load      Int      @default(0)
  memory    Float?
  cpu       Float?

  worker Worker @relation(fields: [workerId], references: [id], onDelete: Cascade)

  @@index([workerId, timestamp])
  @@map("worker_heartbeats")
}

// ---------------------------------------------------------------------------
// DEAD LETTER QUEUE
// ---------------------------------------------------------------------------

model DeadLetterQueue {
  id         String    @id @default(uuid())
  jobId      String    @unique @map("job_id")
  reason     String
  failedAt   DateTime  @default(now()) @map("failed_at")
  attempts   Int
  lastError  String?   @map("last_error")
  resolvedAt DateTime? @map("resolved_at")
  resolvedBy String?   @map("resolved_by")

  job Job @relation(fields: [jobId], references: [id], onDelete: Cascade)

  @@index([failedAt])
  @@index([resolvedAt])
  @@map("dead_letter_queue")
}

// ---------------------------------------------------------------------------
// AUDIT LOGS
// ---------------------------------------------------------------------------

enum AuditAction {
  CREATE
  UPDATE
  DELETE
  PAUSE
  RESUME
  RETRY
  CANCEL
  LOGIN
  LOGOUT
  WORKER_START
  WORKER_STOP
}

enum AuditResource {
  USER
  ORGANIZATION
  PROJECT
  QUEUE
  JOB
  WORKER
  SCHEDULED_JOB
  RETRY_POLICY
}

model AuditLog {
  id         String        @id @default(uuid())
  userId     String?       @map("user_id")
  action     AuditAction
  resource   AuditResource
  resourceId String?       @map("resource_id")
  metadata   Json?
  ipAddress  String?       @map("ip_address")
  userAgent  String?       @map("user_agent")
  createdAt  DateTime      @default(now()) @map("created_at")

  user User? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([userId, createdAt])
  @@index([resource, resourceId])
  @@index([action, createdAt])
  @@index([createdAt])
  @@map("audit_logs")
}

// ---------------------------------------------------------------------------
// NOTIFICATIONS
// ---------------------------------------------------------------------------

enum NotificationType {
  JOB_FAILED
  JOB_COMPLETED
  WORKER_OFFLINE
  QUEUE_PAUSED
  DLQ_ENTRY
  SYSTEM
}

model Notification {
  id        String           @id @default(uuid())
  userId    String           @map("user_id")
  type      NotificationType
  title     String
  message   String
  read      Boolean          @default(false)
  metadata  Json?
  createdAt DateTime         @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, read, createdAt])
  @@map("notifications")
}
